# kubo-bilayer

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: change_log.md  diagnotstics.md
examples/: toy_model_2band.py
kubo/: __init__.py  config.py  functional_trace.py  gluing.py  gluing_new.py  greens.py  grids.py  logging_utils.py  plotting.py  presets.py  streda.py
kubo/models/: __init__.py  orbitronic.py  registry.py  toy.py
kubo_bilayer/: README.md
kubo_bilayer/0_setup/: hamiltonians.py
kubo_bilayer/analytics/: __init__.py  bulk.py  halfspace.py  interface.py
kubo_bilayer/fermi_surface/: __init__.py  zp_chains.py  zp_weights.py
kubo_bilayer/greens/: __init__.py  bilayer.py  bulk.py  halfspace.py  interface.py
kubo_bilayer/numerics/: poles.py  residues.py
kubo_bilayer/setup/: hamiltonians.py  operators.py
kubo_numerics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
numeric_version/: README.md
numeric_version/docs/: diagnotstics.md  status.md
numeric_version/kubo/: config.py  grids.py  integrate.py  io.py
numeric_version/kubo/diagnostics/: kz_coverage.py
numeric_version/kubo/models/: __init__.py  toy_single.py
numeric_version/scripts/: plot_interfacial_greens.py
numeric_version/tests/: test_config.py  test_presets.py  test_toy_model.py
numeric_version/tests/pipeline/: test_orbitronic_gluing.py  test_orbitronic_kspace.py  test_toy_kspace.py
scripts/: benchmark.py  plot_benchmark.py  plot_bulk_greens.py  plot_fft_decay_toy.py  plot_interfacial_greens.py  plot_orbitronics.py  run_eta_sweep.py  run_streda_dc.py
showcases/: orbitronics.py  single_channel.py  toy_degenerate.py  toy_double_pole.py  toy_trivial.py
tests/: conftest.py  test_bilayer.py  test_bulk.py  test_config.py  test_gluing.py  test_greens.py  test_greens_toy.py  test_grids.py  test_interface.py  test_orbitronic_model.py  test_plotting.py  test_poles.py  test_residues.py  test_toy_greens_kspace.py  test_zp_chains.py  test_zp_weights.py
tests/pipeline/: test_orbitronic_fft.py  test_orbitronic_gluing.py  test_toy_fft.py  test_toy_gluing.py
