[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubo_numerics"
version = "0.1.0"
description = "Numerical Kubo observable computation (Green's functions, Streda terms, etc.)"
authors = [
    { name = "Leona Rodenkirchen" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools]
packages = ["kubo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]