[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubo_bilayer"
version = "0.1.0"
description = "Numerical Kubo observable computation (Green's functions, Streda terms, etc.) for a interfacial bilayer system"
authors = [
    { name = "Leona Rodenkirchen" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

plot = [
  "matplotlib>=3.8",
]


[tool.setuptools]
packages = ["kubo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]